--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -68,39 +68,44 @@ body{
 
 /* 카드들 */
 
-.cards{
+/* .cards{
     min-height: 1200px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     display: inline;
-}
+    background-color: #F4EBD2;
+} */
 
 .card1, .card2, .card3{
-    width: 20%;
-    height: 60%;
+    width: 300px;
+    height: 300px;
     border: 1px solid white;
     float: left;
-    margin-top: 7em;
-    margin-left: 7em;
+    margin-top: 12em;
+    margin-right: auto;
+    margin-left: 4em;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 50%;
+    opacity: 0.4;
+    
 }
-
-.card1{
-    display: inline-block;
-}
-
 .openImage{
-    width: 100%;
-    height: 60%; 
+    width: auto;
+    height: 70%; 
 }
 
 .openImage img{
     width: 90%;
     height: 100%;
-    display: contain;
-    margin-left: 5%;
+    
+}
+.image1{
+    padding-left: 1em;
+   
 }
 
+.image2{
+    padding-left: 1em;
+}
