--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -97,8 +97,10 @@ body{
 }
 
 .openImage img{
-    width: 90%;
+    width: 80%;
     height: 100%;
+    margin-left: 1em;
+    margin-top: 1em;
     
 }
 .image1{
